--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -24,6 +24,7 @@
         display: flex;
         flex-grow: 2;
         align-items: center;
+
         justify-content: flex-start;
 
         @media only screen and (max-width: $bp-medium) {
@@ -107,22 +108,18 @@
         color: var(--color-dark-blue);
         letter-spacing: 0.8px;
 
+        @media only screen and (max-width: $bp-smallest) {
+            font-size: 1.6rem;
+        }
+
         &-pre {
             font-weight: 200;
             text-align: center;
-
-            @media only screen and (max-width: $bp-smallest) {
-                font-size: 1.6rem;
-            }
         }
 
         &-post {
             font-weight: 600;
             text-align: center;
-
-            @media only screen and (max-width: $bp-smallest) {
-                font-size: 1.6rem;
-            }
         }
     }
 
@@ -146,7 +143,6 @@
 
 .attribution {
     font-size: 11px;
-    align-self: center;
 }
 
 .attribution a {
